--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 
 /* Optional tambahan biar keren */
 body {
-  background-color: #f8f9ff;
+  background-color: #00ff0;
   font-family: 'Arial', sans-serif;
 }
